[gd_scene load_steps=6 format=3 uid="uid://c45reygjcc4yt"]

[ext_resource type="Script" path="res://Minijuego3/mundo.gd" id="1_5m2u4"]
[ext_resource type="Texture2D" uid="uid://cufm6i4dfv0wb" path="res://Minijuego3/one_eye.png" id="2_1ybxy"]
[ext_resource type="PackedScene" uid="uid://crgjwdi3psx4b" path="res://Minijuego3/ship_enemy.tscn" id="2_6eueh"]
[ext_resource type="PackedScene" uid="uid://cbx0sjtcy3pp0" path="res://Minijuego3/ship_player.tscn" id="3_2kkv0"]

[sub_resource type="Curve2D" id="Curve2D_jjfqs"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 940, 96, -11.9865, -446.496, 11.9865, 446.496, 1776, 545, 0, 0, 0, 0, 970, 1004, -56.9357, 428.516, 56.9357, -428.516, 233, 533, 0, 0, 0, 0, 940, 96)
}
point_count = 5

[node name="mundo" type="Node"]
script = ExtResource("1_5m2u4")
enemy_scene = ExtResource("2_6eueh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(962, 540)
scale = Vector2(0.265399, 0.266536)
texture = ExtResource("2_1ybxy")

[node name="borde_eye" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="borde_eye"]
polygon = PackedVector2Array(8, -3, 1926, 0, 1920, 1082, 2, 1082, 476, 887, 874, 1004, 1431, 938, 1689, 755, 1788, 545, 1674, 306, 1452, 162, 1093, 90, 730, 111, 407, 243, 239, 465, 245, 692, 455, 866, 11, 1067)

[node name="Ship_player" parent="." instance=ExtResource("3_2kkv0")]
position = Vector2(974, 542)

[node name="Path_enemy" type="Path2D" parent="."]
position = Vector2(249.644, 122.789)
scale = Vector2(0.778354, 0.752203)
curve = SubResource("Curve2D_jjfqs")

[node name="PathFollow2D" type="PathFollow2D" parent="Path_enemy"]
position = Vector2(940, 96)
rotation = 0.492871

[node name="Enemy_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Enemy_timer" to="." method="_on_enemy_timer_timeout"]
